# rayt

./: .gitignore  CHANGELOG.md  Makefile  README.md  image.cc  rayt.cabal
app/: Camera.hs  Image.hs  Interval.hs  Lib.hs  Main.hs  Ray.hs  Vec3.hs
assets/: wiki.ppm
docs/: hittable-fix.md
