cabal-version:      3.0
name:               rayt
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             LitFill
maintainer:         marrazzy54@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable rayt
    import:           warnings
    main-is:          Main.hs
    other-modules:    Vec3
                    , Image
                    , Ray
                    , Lib
                    , Interval
                    , Camera
    -- other-extensions:
    build-depends:    base ^>=4.22.0.0
    hs-source-dirs:   app
    default-language: GHC2024
